--- a/css/styles-ourcompany.css
+++ b/css/styles-ourcompany.css
@@ -123,258 +123,59 @@
 }
 
 
-@media screen and (min-width:1441px) {
-  #header-image{
-    width: 60%;
-    margin-top: 36px;
-    margin-left: 4%;
-  }
-  #header-both {
-    margin-left: 8%;
-  }
-  .welcome-info {
-    margin-right: 10%;
-    margin-top: -344px;
-    margin-bottom: 72px;
-  }
-  .welcome-info h6 {
-    font-size: 56px;
-  }
-  .welcome-info p {
-    font-size: 32px;
-    line-height: 0.9;
-  }
+/* @media screen and (min-width:1441px) {
   .navbar {
     padding-left: 20%;
     padding-right: 20%;
   }
-  .navbar li {
-    font-size: 20px;
+  #header-both{
+    width: 80%;
+    margin-left: 12%;
   }
-  #home {
-    margin-left: -24px;
-  }
-  #content-header {
-    font-size: 172px;
-    margin-left: 144px;
-    margin-top: 48px;
-  }
-  .top-follow {
-    margin-top: 48px;
-  }
-  .top-follow h3 {
-    font-size: 56px;
-  }
-  .icons-top {
-    width: 10%;
-  }
-  #instagram-top {
-    margin-left: 236px;
-  }
-  #whole-body {
-    margin-left: 10%;
+  .welcome-info {
+    margin-right: 12%;
   }
   .page-content {
-    width: 80%;
-    margin-left: 10%;
+    width: 60%;
+    margin-left: 22%;
     margin-top: 1%;
   }
-  .page-content p {
-    font-size: 24px;
-  }
-  #quote {
-    font-size: 28px;
-  }
-  #yelp-author {
-    font-size: 26px;
-  }
   #mango-image {
-    width: 32%;
-  }
-  #content-image-boxes h6 {
-    margin-top: 4%;
-    font-size: 48px;
-  }
-  #content-image-boxes p {
-    font-size: 24px;
-  }
-  #content-image-boxes img {
-    width: 70%;
-    margin-top: 24px;
-  }
-  #public-image {
-    margin-left: 108px;
-  }
-  #border-above-map {
-    margin-top: 4%;
-  }
-  .headers-maps-insta {
-    font-size: 48px;
-  }
-  #countup h3 {
-    font-size: 48px;
-  }
-  #countup p {
-    font-size: 48px;
-  }
-  #insta-text {
-    font-size: 24px;
-  }
-  .insta-div {
-    width: 40%;
-    margin-left: 8%;
-  }
-  .map-div {
-    width: 40%;
+    width: 25%;
   }
   #border {
     margin-top: 1%;
   }
-  #border-above-footer {
-    margin-top: 1%;
-  }
-  #footer-block {
-    margin-left: 3%;
-    margin-top: 3%;
-  }
-  .footer-links h5 {
-    font-size: 48px;
-  }
-  .footer-links p {
-    font-size: 32px;
-  }
   .bottom-follow {
-    margin-top: -4%;
-  }
-  .bottom-follow h3 {
-    font-size: 48px;
+    margin-top: -7%;
+    margin-left: -2%;
   }
   .icons-bottom {
     width: 7%;
   }
-  #instagram-bottom {
-    margin-left: 394px;
-  }
-  .footer-info {
-    margin-top: 10%;
-  }
-  .footer-info h6 {
-    font-size: 48px;
-  }
-  .footer-info p {
-    font-size: 32px;
-    line-height: 0.9;
+  #icons-bottom-shift {
+    margin-left: 40%;
   }
 }
 
 
 @media screen and (min-width:1025px) and (max-width:1440px) {
-  #header-image {
-    margin-top: 24px;
-    margin-left: 24px;
-  }
-  .welcome-info h6 {
-    font-size: 38px;
-  }
-  .welcome-info p {
-    font-size: 22px;
-    line-height: 0.9;
-  }
-  .welcome-info {
-    margin-top: -264px;
-    margin-right: -24px;
-  }
   .navbar {
-    font-size: 18px;
-    padding-left: 10%;
+    padding-left: 12%;
     padding-right: 8%;
   }
-  #content-header {
-    font-size: 132px;
-    margin-left: 56px;
-    margin-top: 24px;
-  }
-  .top-follow h3 {
-    font-size: 42px;
-  }
-  .top-follow {
-    margin-top: 18px;
-    margin-left: 224px;
-  }
-  #instagram-top {
-    margin-left: 108px
-  }
-  #whole-body {
-    margin-left: 9%;
-  }
-  .page-content p {
-    font-size: 18px;
-  }
-  #mango-image {
-    width: 45%;
-  }
-  #yelp-author {
-    font-size: 20px;
-  }
-  #content-image-boxes h6 {
-    font-size: 36px;
-  }
-  #content-image-boxes p {
-    font-size: 18px;
-  }
-  #content-image-boxes img {
-    margin-top: 24px;
-  }
-  .headers-maps-insta {
-    margin-top: -24px;
-    font-size: 36px;
-  }
-  #insta-text {
-    font-size: 18px;
-  }
-  #countup h3 {
-    font-size: 36px;
-  }
-  #countup p {
-    font-size: 36px;
-  }
-  #footer-block {
-    margin-top: 12px;
-    margin-left: 24px;
-  }
-  .footer-links h5 {
-    font-size: 36px;
-  }
-  .footer-links p {
-    font-size: 24px;
-  }
-  .rinella-footer-pic {
-    margin-left: 48px;
-  }
-  .footer-info {
-    margin-left: 48px;
-  }
-  .footer-info h6 {
-    font-size: 36px;
-  }
-  .footer-info p {
-    font-size: 22px;
-    line-height: 0.9;
-  }
-  .bottom-follow h3 {
-    font-size: 36px;
-  }
   .bottom-follow {
-    margin-top: 2%;
-    margin-left: 3%;
+    margin-top: -5%;
+    margin-left: 2%;
   }
   .icons-bottom {
     width: 11%;
   }
-  #instagram-bottom {
-    margin-left: 190px;
+  #icons-bottom-shift {
+    margin-left: 32%;
   }
 }
+
 
 @media screen and (min-width:768px) and (max-width:1024px) {
   #whole-body {
